# ShadowWire

./: .gitignore  HUMAN_ACTION_REQUIRED.md  PRD.md  README.md  package-lock.json  package.json  skills-lock.json  testnet-addresses.json
circuits/auditor_viewing_key/: Nargo.toml
circuits/compliance/: Nargo.toml  Prover.toml  inputs.json
circuits/compliance_nf_util/: Nargo.toml  Prover.toml
circuits/compliance_tree_util/: Nargo.toml  Prover.toml
circuits/hash_util/: Nargo.toml  Prover.toml
circuits/pipeline_test/: Nargo.toml
circuits/shielded_transfer/: Nargo.toml  (+1 more)
contracts/: Cargo.toml
contracts/compliance_registry/: Cargo.toml
contracts/compliance_registry/src/: lib.rs
contracts/compliance_verifier/: Cargo.toml
contracts/compliance_verifier/src/: lib.rs
contracts/shielded_pool/: Cargo.toml
contracts/shielded_pool/src/: lib.rs
contracts/shielded_transfer_verifier/: Cargo.toml
contracts/shielded_transfer_verifier/src/: lib.rs
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
mock-issuer/: package-lock.json  package.json
scripts/: bind-check.mjs  corridor-e2e.mjs  corridor-e2e.sh  deploy-attest-protocol.mjs  deploy-pool-v10.mjs  deploy-pool-v11.mjs  deploy-pool-v12.mjs  deploy-pool-v8.mjs  deploy-pool-v9.mjs  deploy.sh  fund-accounts.sh  install-tools.sh  pipeline-test.sh  register-kyc-bls.mjs  revoke-kyc.mjs  run-circuit.sh  run-demo.sh  set-registry-root.mjs  setup-compliance-inputs.sh  update-vks-and-pool.sh
(+54 files in other folders)
